Add candidacy number retrieval